@@ -277,14 +277,14 @@
 									{if $customeradd.tenexistencewarning}
 									<INPUT type="hidden" name="customeradd[tenexistencewarning]" value="1">
 									{/if}
-									<a class="gusapi-button" data-type="{\GusApi\RegonConstantsInterface::SEARCH_TYPE_NIP}">&raquo;&raquo;&raquo;</a>
+									<a class="gusapi-button" data-type="{\GusApi\RegonConstantsInterface::SEARCH_TYPE_NIP}" href="#">&raquo;&raquo;&raquo;</a>
 								</TD>
 							</TR>
 							<TR>
 								<TD style="width: 1%;" class="nobr">{trans("REGON")}:</TD>
 								<TD style="width: 99%;">
 									<INPUT type="text" size="30" value="{$customeradd.regon}" name="customeradd[regon]" {tip text="Enter Business Registration Number (optional)" trigger="regon"}>
-									<a class="gusapi-button" data-type="{\GusApi\RegonConstantsInterface::SEARCH_TYPE_REGON}">&raquo;&raquo;&raquo;</a>
+									<a class="gusapi-button" data-type="{\GusApi\RegonConstantsInterface::SEARCH_TYPE_REGON}" href="#">&raquo;&raquo;&raquo;</a>
 								</TD>
 							</TR>
 							<TR>
@@ -297,7 +297,7 @@
 								<TD style="width: 1%;" class="nobr">{trans("RBE")}:</TD>
 								<TD style="width: 99%;">
 									<INPUT type="text" size="30" value="{$customeradd.rbe}" name="customeradd[rbe]" {tip text="Enter National Court Register / Register of Business Entities Number (optional)" trigger="rbe"}>
-									<a class="gusapi-button" data-type="{\GusApi\RegonConstantsInterface::SEARCH_TYPE_KRS}">&raquo;&raquo;&raquo;</a>
+									<a class="gusapi-button" data-type="{\GusApi\RegonConstantsInterface::SEARCH_TYPE_KRS}" href="#">&raquo;&raquo;&raquo;</a>
 								</TD>
 							</TR>
 						</TABLE>
@@ -476,8 +476,27 @@
 				function(data) {
 					GusApiFinished('customeradd', data.details);
 				});
+			return;
+		});
+
+		$('[data-address="zip"]').after('&nbsp;<a class="zip-code-button" href="#">&raquo;&raquo;&raquo;</a>');
+
+		$('.zip-code-button').click(function() {
+			var box = $(this).closest('.location-box-expandable')
+			var city   = box.find('[data-address="city"]').val();
+			var street = box.find('[data-address="street"]').val();
+			var house  = box.find('[data-address="house"]').val();
+			var zipelem = box.find('[data-address="zip"]');
+
+			if (city.length && street.length && house.length) {
+				osm_get_zip_code(city, street, house, function (zip) {
+					zipelem.val(zip).trigger('input');
+				});
+			}
+			return false;
 		});
 	});
+
 	if(document.forms['customeradd'].elements['customeradd[pin]'].value == '') randomize();
 //-->
 </SCRIPT>
